--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <h1>
       Witaj na mojej stronie
     </h1>
+    <button class="button">Jem placki</button>
+    <button class="button">Jem marchewkę</button>
+    <button class="button">Jem kotleta</button>
+    <button class="button">Jem bo lubię</button>
+    <button class="button">Jem zupę</button>
     <script type="text/javascript" src="js/scripts.js"></script>
   </body>
 </html>
