--- a/index.html
+++ b/index.html
@@ -3,18 +3,14 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Zadanie 1</title>
+    <title>Zadanie 8.11</title>
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <h1>
-      Witaj na mojej stronie
-    </h1>
-    <button class="button">Jem placki</button>
-    <button class="button">Jem marchewkę</button>
-    <button class="button">Jem kotleta</button>
-    <button class="button">Jem bo lubię</button>
-    <button class="button">Jem zupę</button>
+    <ul id="list">
+      <li>item 0</li>
+    </ul>
+    <button id="addElem">Dodaj</button>
     <script type="text/javascript" src="js/scripts.js"></script>
   </body>
 </html>
